--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,14 +38,13 @@
 
     <TextView
         android:id="@+id/tvTitle"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
         android:text="@string/nh_p_email_v_m_t_kh_u_c_a_b_n"
-        style="@style/Text"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tvDangNhapTitle"
         app:layout_constraintTop_toBottomOf="@id/tvDangNhapTitle" />
 
 
